import javax.swing.*;

/**
 * This is a label that indicates whether the player is active
 */
public class MyLabel extends JLabel {
    MyLabel() {}
}
